# Chess-Engine

./: CMakeLists.txt  README.md  problems.md
assets/ascii/: emptySquare.txt
src/: ChessBoard.cpp  ChessBoard.h  PieceDescription.h  PieceMovement.cpp  PieceMovement.h  main.cpp
src/engine/: Engine.h  eval.cpp
